--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -12,7 +12,7 @@ body, html {
 	box-shadow: 0px 1px 1px #E5E5E5;
 	min-height: 200px;
 	min-width: 200px;
-	float: left;
+	display: inline-block;
 }
 
 .x-product img {
